--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,8 @@
     "angular": "^1.4.0",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
-    "angular-resource": "1.2.16",
-    "angular-cookies": "1.2.16",
+    "angular-resource": "^1.4.0",
+    "angular-cookies": "^1.4.0",
     "angular-sanitize": "1.2.16",
     "angular-animate": "1.2.16",
     "angular-touch": "1.2.16",
