--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,11 @@
   "name": "sb-admin",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.4.0",
+    "angular": "1.4.0",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
-    "angular-resource": "^1.4.0",
-    "angular-cookies": "^1.4.0",
+    "angular-resource": "1.4.0",
+    "angular-cookies": "1.2.6",
     "angular-sanitize": "1.2.16",
     "angular-animate": "1.2.16",
     "angular-touch": "1.2.16",
