--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "sb-admin",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.4.0",
+    "angular": "1.2.6",
     "json3": "3.3.1",
     "es5-shim": "3.1.0",
     "angular-resource": "1.4.0",
@@ -19,7 +19,8 @@
     "angular-toggle-switch": "1.2.1",
     "metisMenu": "1.1.3",
     "angular-chart.js": "0.5.2",
-    "moment": "2.15.1"
+    "moment": "2.15.1",
+    "angular-toastr": "0.4.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
